# sistemas_operacionais

./: .clang-format  README.md
examples/: .gitignore  basic_pthreads.c  fork.c  hello-world.c  memoria_compartilhada_pthreads_2.c
notes/: proocesso.md
projects/analise_sensoriamento_pthreads/: .clang-format  .gitignore  Makefile  README.md  sensoriamento.c  test.csv
projects/analise_sensoriamento_pthreads/include/: csv_data.h  data_analysis.h  file_mapping.h  hash_table.h  line_count.h  thread_safe_queue.h  thread_utils.h  utils.h
projects/analise_sensoriamento_pthreads/rust_version/: Cargo.toml
projects/analise_sensoriamento_pthreads/rust_version/src/: data_analysis.rs  device_hash.rs  error.rs  file_mapping.rs  lib.rs  main.rs  parallel_processor.rs  types.rs
projects/analise_sensoriamento_pthreads/src/: csv_data.c  data_analysis.c  file_mapping.c  hash_table.c  line_count.c  main.c  thread_safe_queue.c  thread_utils.c  utils.c
projects/analise_sensoriamento_pthreads/src/script/: analyze_data.py  requirements.txt
projects/analise_sensoriamentos_pthreads/rust_version/src/: types.rs
projects/memoria_compartilhada_pthreads_rust/: Cargo.toml
projects/memoria_compartilhada_pthreads_rust/src/: main.rs
