[package]
name = "analise_sensoriamento_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.9"
tokio = { version = "1.0", features = ["full"] }
polars = { version = "0.41", features = ["lazy", "csv", "temporal", "strings"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
crossbeam-channel = "0.5"
rayon = "1.8"
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
num_cpus = "1.16"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"

# [[bench]]
# name = "comparison"
# harness = false
